# ssrc

./: .gitignore  .gitmodules  ALGORITHM.md  API_DOCUMENTATION.md  CMakeLists.txt  Jenkinsfile  NOTICE.txt  README.md  SUSTAINABILITY.md  flake.nix  winbuild-clang.bat  winbuild-msvc.bat
.flox/: env.json
.flox/env/: manifest.toml
.flox/pkgs/: ssrc.nix
install/include/tlfloat/: bigint.hpp  rpitab.hpp  tlfloat.h  tlfloat.hpp  tlfloatconfig.hpp  tlmath.hpp
install/lib/cmake/sleef/: sleefTargets-release.cmake  sleefTargets.cmake
install/lib/pkgconfig/: sleef.pc  tlfloat.pc
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  cli.cpp  scsa.1  scsa.cpp  shapercoefs.h  ssrc.1
src/include/shibatch/: shapercoefs.h  ssrc.hpp  ssrcsoxr.h
src/libshibatchdsp/: ArrayQueue.hpp  BGExecutor.hpp  BlockingQueue.hpp  CMakeLists.txt  ChannelMixer.hpp  DFTFilter.hpp  FastPP.hpp  Kaiser.hpp  Minrceps.hpp  ObjectCache.hpp  PartDFTFilter.hpp  PartDFTFilterMT.hpp  SRC.hpp  WavReader.hpp  WavWriter.hpp  dr_wav.hpp  libssrc.cpp  shibatchdsp.pc.in  ssrcsoxr.cpp  xdr_wav.cpp  xdr_wav.h
src/libshibatchsrc/: ArrayQueue.hpp  CMakeLists.txt  ChannelMixer.hpp  DFTFilter.hpp  Dither.hpp  FastPP.hpp  Kaiser.hpp  Minrceps.hpp  RNG.hpp  SRC.hpp  WavReader.hpp  WavWriter.hpp  dr_wav.h  dr_wav.hpp  libssrc.cpp  shibatchsrc.pc.in  ssrcsoxr.cpp
src/tester/: 10kHz-100dB-96k-44k1.scsa  10kHz-100dB.check  10kHz-100dB.scsa  10kHz-140dB.check  10kHz-140dB.scsa  12kHz-100dB.scsa  CMakeLists.txt  cmpwav.cpp  execute_commands.cmake  execute_two_commands.cmake  impulse.44100.48000.scsa  impulse.48000.44100.scsa  sin10k_44100i16_d0.scsa  sin10k_44100i16_d6.scsa  sin10k_44100i16_d98.scsa  sin10k_44100i16_d99.scsa  sin10k_44100i8_d6.scsa  sin10k_44100i8_d98.scsa  sin10k_44100i8_d99.scsa  sin10k_48000i16_d0.scsa  sin10k_48000i16_d6.scsa  sin10k_48000i16_d98.scsa  sin10k_48000i16_d99.scsa  sin10k_48000i8_d0.scsa  sin10k_48000i8_d6.scsa  sin10k_48000i8_d98.scsa  sin10k_48000i8_d99.scsa  test_10kHz_-100dB.cmake  test_10kHz_-140dB.cmake  test_api.cmake  test_compare.cmake  test_cppapi.cpp  test_oneshot.c  test_soxrapi.c
